--- a/platformio.ini
+++ b/platformio.ini
@@ -1,18 +1,16 @@
-; PlatformIO Project Configuration File
-;
-;   Build options: build flags, source filter
-;   Upload options: custom upload port, speed and extra flags
-;   Library options: dependencies, extra library storages
-;   Advanced options: extra scripting
-;
-; Please visit documentation for the other options and examples
-; https://docs.platformio.org/page/projectconf.html
+[common_env_data]
+lib_deps_builtin =
+	SPI
+	Wire
+monitor_speed = 115200
+upload_port = /dev/cu.SLAB_USBtoUART
+upload_speed = 921600
 
 [env:esp-wrover-kit]
 platform = espressif32
 board = esp-wrover-kit
 framework = arduino
-monitor_speed = 115200
+monitor_speed = ${common_env_data.monitor_speed}
 build_flags =
 	-DCORE_DEBUG_LEVEL=5
 	-DBOARD_HAS_PSRAM
@@ -23,5 +21,37 @@ lib_deps = bodmer/TFT_eSPI@^2.3.70
 platform = espressif32
 board = esp32dev
 framework = arduino
-monitor_speed = 115200
+monitor_speed = ${common_env_data.monitor_speed}
 lib_deps = bodmer/TFT_eSPI@^2.3.70
+
+[env:m5stack-core-esp32]
+platform = espressif32
+board = m5stack-core-esp32
+framework = arduino
+lib_ldf_mode = deep
+board_build.f_flash = 80000000L
+board_build.partitions = min_spiffs.csv
+monitor_speed = ${common_env_data.monitor_speed}
+upload_speed = ${common_env_data.upload_speed}
+build_flags = -DM5STACK
+lib_deps = m5stack/M5Stack
+
+; [env:m5stack-core-esp32]
+; platform = espressif32
+; board = m5stack-core-esp32
+; framework = arduino
+; monitor_speed = ${common_env_data.monitor_speed}
+; lib_deps =
+; 	TFT_eSPI
+; 	${common_env_data.lib_deps_builtin}
+; build_flags =
+; 	-DCORE_DEBUG_LEVEL=5
+; upload_speed = ${common_env_data.upload_speed}
+; ; board_build.f_cpu=240000000L
+; ; board_build.flash_size=4MB
+; ; board_build.flash_mode=dio
+; ; board_build.flash_mode = qio
+; ; board_build.boot=dio
+; ; board_build.partitions=default
+; ; board_build.f_flash = 80000000L
+; ; target = upload
