--- a/platformio.ini
+++ b/platformio.ini
@@ -5,12 +5,14 @@ lib_deps_builtin =
 monitor_speed = 115200
 upload_port = /dev/cu.SLAB_USBtoUART
 upload_speed = 921600
+data_dir = data ;bin
 
 [env:esp-wrover-kit]
 platform = espressif32
 board = esp-wrover-kit
 framework = arduino
 monitor_speed = ${common_env_data.monitor_speed}
+data_dir = ${common_env_data.data_dir}
 build_flags =
 	-DCORE_DEBUG_LEVEL=5
 	-DBOARD_HAS_PSRAM
@@ -22,6 +24,7 @@ platform = espressif32
 board = esp32dev
 framework = arduino
 monitor_speed = ${common_env_data.monitor_speed}
+data_dir = ${common_env_data.data_dir}
 lib_deps = bodmer/TFT_eSPI@^2.3.70
 
 [env:m5stack-core-esp32]
@@ -33,25 +36,6 @@ board_build.f_flash = 80000000L
 board_build.partitions = min_spiffs.csv
 monitor_speed = ${common_env_data.monitor_speed}
 upload_speed = ${common_env_data.upload_speed}
+data_dir = ${common_env_data.data_dir}
 build_flags = -DM5STACK
 lib_deps = m5stack/M5Stack
-
-; [env:m5stack-core-esp32]
-; platform = espressif32
-; board = m5stack-core-esp32
-; framework = arduino
-; monitor_speed = ${common_env_data.monitor_speed}
-; lib_deps =
-; 	TFT_eSPI
-; 	${common_env_data.lib_deps_builtin}
-; build_flags =
-; 	-DCORE_DEBUG_LEVEL=5
-; upload_speed = ${common_env_data.upload_speed}
-; ; board_build.f_cpu=240000000L
-; ; board_build.flash_size=4MB
-; ; board_build.flash_mode=dio
-; ; board_build.flash_mode = qio
-; ; board_build.boot=dio
-; ; board_build.partitions=default
-; ; board_build.f_flash = 80000000L
-; ; target = upload
